--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,18 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+/* loading animation */
+.loader {
+  @apply w-12 h-12 border-[5px] border-cyan-200 rounded-[50%] inline-block box-border border-b-transparent;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
